[gd_scene load_steps=10 format=3 uid="uid://cuesay1mn2uq8"]

[ext_resource type="Script" path="res://rooms/castle_room.gd" id="1_uk66y"]
[ext_resource type="TileSet" uid="uid://ck4nnts3mjdv2" path="res://tilesets/tileset.tres" id="2_fuwbx"]
[ext_resource type="Shader" path="res://debug/tilemap_gradient_map.gdshader" id="2_w7cyl"]
[ext_resource type="PackedScene" uid="uid://83gie5tlktus" path="res://dynamic_camera/dynamic_camera.tscn" id="3_thfvk"]
[ext_resource type="Texture2D" uid="uid://d2rghj33ifedc" path="res://debug/player_spawn.png" id="4_va2wi"]
[ext_resource type="PackedScene" uid="uid://dff12rdqx482b" path="res://rooms/exit/room_exit.tscn" id="5_dh6mk"]

[sub_resource type="Gradient" id="Gradient_mkddu"]
offsets = PackedFloat32Array(0, 0.257576, 0.424242, 0.621212, 0.838384)
colors = PackedColorArray(0.027451, 0, 0.172549, 1, 0.187822, 0.00216718, 0.259236, 1, 0.6, 0.0156863, 0.278431, 1, 0.870588, 0.388235, 0.266667, 1, 0.948188, 0.714519, 0.479285, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3ppn0"]
gradient = SubResource("Gradient_mkddu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_otd6u"]
shader = ExtResource("2_w7cyl")
shader_parameter/final_saturation = 0.5
shader_parameter/gradient = SubResource("GradientTexture1D_3ppn0")

[node name="CastleRoom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_uk66y")

[node name="TileMap" type="TileMap" parent="."]
z_index = -5
y_sort_enabled = true
material = SubResource("ShaderMaterial_otd6u")
tile_set = ExtResource("2_fuwbx")
format = 2
layer_0/name = "invisible"
layer_0/modulate = Color(1, 1, 1, 0)
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(1114108, 196610, 2, 1179644, 196610, 2, 1245181, 196610, 2, 1310717, 196610, 2, 1376254, 196610, 2, 1441790, 196610, 2, 1507327, 196610, 2, 1572863, 196610, 2, 1572864, 196610, 2, 1638400, 196610, 2, 1703937, 196610, 2, 1769473, 196610, 2, 1835010, 196610, 2, 1900546, 196610, 2, 1966083, 196610, 2, 2031619, 196610, 2, 1966084, 196610, 2, 1900548, 196610, 2, 1835013, 196610, 2, 1769477, 196610, 2, 1703942, 196610, 2, 1638406, 196610, 2, 1572871, 196610, 2, 1507335, 196610, 2, 1441800, 196610, 2, 1376264, 196610, 2, 1310729, 196610, 2, 1245193, 196610, 2, 1179658, 196610, 2, 1114122, 196610, 2, 1048587, 196610, 2, 983050, 196610, 2, 917514, 196610, 2, 851977, 196610, 2, 786441, 196610, 2, 720904, 196610, 2, 655368, 196610, 2, 1048572, 196610, 2, 983037, 196610, 2, 917501, 196610, 2, 851966, 196610, 2, 786430, 196610, 2, 720895, 196610, 2, 655359, 196610, 2, 524288, 196610, 2, 458752, 196610, 2, 393217, 196610, 2, 327681, 196610, 2, 262146, 196610, 2, 196610, 196610, 2, 131075, 196610, 2, 65539, 196610, 2, 131076, 196610, 2, 196612, 196610, 2, 262149, 196610, 2, 327685, 196610, 2, 393222, 196610, 2, 458758, 196610, 2, 393223, 196610, 2, 327687, 196610, 2, 262152, 196610, 2, 196616, 196610, 2, 131081, 196610, 2, 65545, 196610, 2, 131082, 196610, 2, 196618, 196610, 2, 262155, 196610, 2, 327690, 196610, 2, 393226, 196610, 2, 458761, 196610, 2, 524297, 196610, 2, 589832, 196610, 2, 1245187, 196610, 1, 1310724, 196610, 1, 1376260, 196610, 1, 1310725, 196610, 1, 1245189, 196610, 1, 1179654, 196610, 1, 1114117, 196610, 1, 1048581, 196610, 1, 1114116, 196610, 1, 1179652, 196610, 1, 1245188, 196610, 1, 1179653, 196610, 1, 1048578, 196610, 1, 983041, 196610, 1, 917505, 196610, 1, 851969, 196610, 1, 786434, 196610, 1, 720898, 196610, 1, 786435, 196610, 1, 851971, 196610, 1, 917507, 196610, 1, 983042, 196610, 1, 917506, 196610, 1, 851970, 196610, 1, 524293, 196610, 0, 458757, 196610, 0, 393221, 196610, 0, 327684, 196610, 0, 262148, 196610, 0, 196611, 196610, 0, 262147, 196610, 0, 327682, 196610, 0, 393218, 196610, 0, 458753, 196610, 0, 524289, 196610, 0, 589824, 196610, 0, 655360, 196610, 0, 786431, 196610, 0, 851967, 196610, 0, 917502, 196610, 0, 983038, 196610, 0, 1048573, 196610, 0, 1114109, 196610, 0, 1179645, 196610, 0, 1114110, 196610, 0, 1048574, 196610, 0, 983039, 196610, 0, 917503, 196610, 0, 786432, 196610, 0, 720896, 196610, 0, 655361, 196610, 0, 589825, 196610, 0, 524290, 196610, 0, 458754, 196610, 0, 393219, 196610, 0, 327683, 196610, 0, 393220, 196610, 0, 458755, 196610, 0, 524291, 196610, 0, 589826, 196610, 0, 655362, 196610, 0, 720897, 196610, 0, 786433, 196610, 0, 851968, 196610, 0, 917504, 196610, 0, 1048575, 196610, 0, 1114111, 196610, 0, 1179646, 196610, 0, 1245182, 196610, 0, 1310718, 196610, 0, 1245183, 196610, 0, 1179647, 196610, 0, 1048576, 196610, 0, 983040, 196610, 0, 1048577, 196610, 0, 1114112, 196610, 0, 1179648, 196610, 0, 1310719, 196610, 0, 1376255, 196610, 0, 1441791, 196610, 0, 1310720, 196610, 0, 1245184, 196610, 0, 1179649, 196610, 0, 1114113, 196610, 0, 1179650, 196610, 0, 1114114, 196610, 0, 1048579, 196610, 0, 983043, 196610, 0, 917508, 196610, 0, 851972, 196610, 0, 786437, 196610, 0, 720901, 196610, 0, 655366, 196610, 0, 589830, 196610, 0, 524295, 196610, 0, 458759, 196610, 0, 393224, 196610, 0, 327688, 196610, 0, 262153, 196610, 0, 196617, 196610, 0, 262154, 196610, 0, 327689, 196610, 0, 393225, 196610, 0, 458760, 196610, 0, 524296, 196610, 0, 589831, 196610, 0, 655367, 196610, 0, 720902, 196610, 0, 786438, 196610, 0, 851973, 196610, 0, 917509, 196610, 0, 983044, 196610, 0, 1048580, 196610, 0, 1114115, 196610, 0, 1179651, 196610, 0, 1245186, 196610, 0, 1310722, 196610, 0, 1245185, 196610, 0, 1310721, 196610, 0, 1376256, 196610, 0, 1441792, 196610, 0, 1507328, 196610, 0, 1441793, 196610, 0, 1376257, 196610, 0, 1441794, 196610, 0, 1376258, 196610, 0, 1310723, 196610, 0, 1376259, 196610, 0, 1441795, 196610, 0, 1507330, 196610, 0, 1572866, 196610, 0, 1507329, 196610, 0, 1572865, 196610, 0, 1638401, 196610, 0, 1703938, 196610, 0, 1638402, 196610, 0, 1572867, 196610, 0, 1507331, 196610, 0, 1441796, 196610, 0, 1507332, 196610, 0, 1441797, 196610, 0, 1376261, 196610, 0, 1310726, 196610, 0, 1245190, 196610, 0, 1179655, 196610, 0, 1114119, 196610, 0, 1048584, 196610, 0, 983048, 196610, 0, 917513, 196610, 0, 851976, 196610, 0, 786440, 196610, 0, 720903, 196610, 0, 786439, 196610, 0, 851974, 196610, 0, 917510, 196610, 0, 983045, 196610, 0, 1048582, 196610, 0, 983046, 196610, 0, 917511, 196610, 0, 851975, 196610, 0, 917512, 196610, 0, 983047, 196610, 0, 1048583, 196610, 0, 1114118, 196610, 0, 983049, 196610, 0, 1048585, 196610, 0, 1114120, 196610, 0, 1179656, 196610, 0, 1245191, 196610, 0, 1310727, 196610, 0, 1376262, 196610, 0, 1441798, 196610, 0, 1507333, 196610, 0, 1572869, 196610, 0, 1638404, 196610, 0, 1572868, 196610, 0, 1638403, 196610, 0, 1703939, 196610, 0, 1769474, 196610, 0, 1835011, 196610, 0, 1769475, 196610, 0, 1703940, 196610, 0, 1769476, 196610, 0, 1703941, 196610, 0, 1638405, 196610, 0, 1572870, 196610, 0, 1507334, 196610, 0, 1441799, 196610, 0, 1376263, 196610, 0, 1310728, 196610, 0, 1245192, 196610, 0, 1179657, 196610, 0, 1114121, 196610, 0, 1048586, 196610, 0, 1835012, 196610, 0, 1900547, 196610, 0, 524294, 196610, 0, 589829, 196610, 0, 655365, 196610, 0, 589828, 196610, 0, 524292, 196610, 0, 458756, 196610, 0, 589827, 196610, 0, 655363, 196610, 0, 720899, 196610, 0, 655364, 196610, 0, 720900, 196610, 0, 786436, 196610, 0)
layer_1/name = "floor"
layer_1/y_sort_enabled = true
layer_1/navigation_enabled = false
layer_1/tile_data = PackedInt32Array(1179645, 196610, 0, 1048574, 196610, 0, 1114110, 196610, 0, 1179646, 196610, 0, 1245182, 196610, 0, 1310718, 196610, 0, 917503, 196610, 0, 983039, 196610, 0, 1048575, 196610, 0, 1114111, 196610, 0, 1179647, 196610, 0, 1245183, 196610, 0, 1310719, 196610, 0, 1376255, 196610, 0, 1441791, 196610, 0, 720896, 196610, 0, 786432, 196610, 0, 851968, 196610, 0, 917504, 196610, 0, 983040, 196610, 0, 1048576, 196610, 0, 1114112, 196610, 0, 1179648, 196610, 0, 1245184, 196610, 0, 1310720, 196610, 0, 1376256, 196610, 0, 1441792, 196610, 0, 1507328, 196610, 0, 589825, 196610, 0, 655361, 196610, 0, 720897, 196610, 0, 786433, 196610, 0, 1048577, 196610, 0, 1114113, 196610, 0, 1179649, 196610, 0, 1245185, 196610, 0, 1310721, 196610, 0, 1376257, 196610, 0, 1441793, 196610, 0, 1507329, 196610, 0, 1572865, 196610, 0, 1638401, 196610, 0, 458754, 196610, 0, 524290, 196610, 0, 589826, 196610, 0, 655362, 196610, 0, 1179650, 196610, 0, 1245186, 196610, 0, 1310722, 196610, 0, 1376258, 196610, 0, 1441794, 196610, 0, 1507330, 196610, 0, 1572866, 196610, 0, 1638402, 196610, 0, 1703938, 196610, 0, 1769474, 196610, 0, 524291, 196610, 0, 589827, 196610, 0, 655363, 196610, 0, 720899, 196610, 0, 1114115, 196610, 0, 1179651, 196610, 0, 1310723, 196610, 0, 1376259, 196610, 0, 1441795, 196610, 0, 1507331, 196610, 0, 1572867, 196610, 0, 1638403, 196610, 0, 1703939, 196610, 0, 1769475, 196610, 0, 1835011, 196610, 0, 1900547, 196610, 0, 655364, 196610, 0, 720900, 196610, 0, 786436, 196610, 0, 851972, 196610, 0, 983044, 196610, 0, 1048580, 196610, 0, 1441796, 196610, 0, 1507332, 196610, 0, 1572868, 196610, 0, 1638404, 196610, 0, 1703940, 196610, 0, 1769476, 196610, 0, 1835012, 196610, 0, 786437, 196610, 0, 851973, 196610, 0, 917509, 196610, 0, 983045, 196610, 0, 1507333, 196610, 0, 1572869, 196610, 0, 1638405, 196610, 0, 1703941, 196610, 0, 720902, 196610, 0, 786438, 196610, 0, 917510, 196610, 0, 983046, 196610, 0, 1048582, 196610, 0, 1114118, 196610, 0, 1376262, 196610, 0, 1441798, 196610, 0, 1507334, 196610, 0, 1572870, 196610, 0, 589831, 196610, 0, 655367, 196610, 0, 1048583, 196610, 0, 1114119, 196610, 0, 1179655, 196610, 0, 1245191, 196610, 0, 1310727, 196610, 0, 1376263, 196610, 0, 1441799, 196610, 0, 1179656, 196610, 0, 1245192, 196610, 0, 1310728, 196610, 0, 1114109, 196610, 0, 983038, 196610, 0, 1048573, 196610, 0, 851967, 196610, 0, 917502, 196610, 0, 655360, 196610, 0, 786431, 196610, 0, 524289, 196610, 0, 589824, 196610, 0, 393218, 196610, 0, 458753, 196610, 0, 1048579, 196610, 0, 1114114, 196610, 0, 917508, 196610, 0, 983043, 196610, 0, 1441797, 196610, 0, 655366, 196610, 0, 720901, 196610, 0, 1310726, 196610, 0, 1376261, 196610, 0, 524295, 196610, 0, 589830, 196610, 0, 1245190, 196610, 0, 851974, 196610, 0, 786439, 196610, 0, 720903, 196610, 0, 786440, 196610, 0, 851976, 196610, 0, 917513, 196610, 0, 983049, 196610, 0, 1048586, 196610, 0, 1114121, 196610, 0, 1179657, 196610, 0, 1114120, 196610, 0, 1048585, 196610, 0, 1048584, 196610, 0, 983048, 196610, 0, 917512, 196610, 0, 983047, 196610, 0, 851975, 196610, 0, 917511, 196610, 0, 524294, 196610, 0, 458757, 196610, 0, 393221, 196610, 0, 327684, 196610, 0, 262148, 196610, 0, 196611, 196610, 0, 262147, 196610, 0, 327682, 196610, 0, 327683, 196610, 0, 393219, 196610, 0, 393220, 196610, 0, 458755, 196610, 0, 524292, 196610, 0, 458756, 196610, 0, 589828, 196610, 0, 524293, 196610, 0, 589829, 196610, 0, 655365, 196610, 0, 458759, 196610, 0, 524296, 196610, 0, 458760, 196610, 0, 393224, 196610, 0, 327688, 196610, 0, 393225, 196610, 0, 262153, 196610, 0, 327689, 196610, 0, 196617, 196610, 0, 262154, 196610, 0, 1572863, 196610, 5, 1507327, 196610, 5, 1441790, 196610, 5, 1376254, 196610, 5, 1310717, 196610, 5, 1245181, 196610, 5, 1179644, 196610, 5, 1572864, 196610, 5, 1638400, 196610, 5, 1703937, 196610, 5, 1769473, 196610, 5, 1835010, 196610, 5, 1900546, 196610, 5, 1966083, 196610, 5, 720898, 196610, 3, 786435, 196610, 5, 851971, 196610, 5, 1048581, 196610, 3, 1114117, 196610, 5, 1179654, 196610, 5, 1114116, 196610, 4, 1179652, 196610, 4, 1245187, 196610, 4, 917505, 196610, 4, 851969, 196610, 4, 786434, 196610, 4, 655368, 196610, 4, 589832, 196610, 4, 524297, 196610, 4, 458761, 196610, 4, 393226, 196610, 4, 327690, 196610, 4, 1572871, 196610, 4, 1507335, 196610, 4, 1441800, 196610, 4, 1376264, 196610, 4, 1310729, 196610, 4, 1245193, 196610, 4, 1179658, 196610, 4, 1114122, 196610, 4, 1638406, 196610, 4, 1703942, 196610, 4, 1769477, 196610, 4, 1835013, 196610, 4, 1900548, 196610, 4, 1966084, 196610, 4)
layer_2/name = "walls"
layer_2/y_sort_enabled = true
layer_2/z_index = -1
layer_2/navigation_enabled = false
layer_2/tile_data = PackedInt32Array(983037, 65540, 0, 917501, 65540, 1, 851966, 65540, 0, 786430, 65540, 1, 720895, 65540, 0, 655359, 65540, 1, 524288, 65540, 0, 524287, 65540, 0, 393216, 65540, 1, 327680, 65540, 0, 262145, 65540, 1, 327681, 65540, 1, 393217, 65540, 0, 458752, 65540, 1, 262146, 65540, 0, 196610, 65540, 1, 851965, 65540, 1, 720893, 65540, 0, 589821, 65540, 1, 458749, 65540, 0, 393213, 65540, 1, 327678, 65540, 0, 262142, 65540, 1, 196607, 65540, 0, 131071, 65540, 1, 0, 65540, 0, -65536, 65540, 1, -131071, 65540, 0, -196607, 65540, 1, -262142, 65540, 0, 131075, 65540, 0, 3, 65540, 1, -131069, 65540, 0, -262141, 65540, 1, -393213, 65540, 0, -327678, 65540, 1, -196606, 65540, 0, -131070, 65540, 1, -65535, 65540, 0, 1, 65540, 1, 65536, 65540, 0, 131072, 65540, 1, 524285, 65540, 0, 458750, 65540, 1, 393214, 65540, 0, 327679, 65540, 1, 262143, 65540, 0, 131073, 65540, 0, 196608, 65540, 1, 262144, 65540, 0, 393215, 65540, 1, 458751, 65540, 0, 524286, 65540, 1, 589822, 65540, 0, 655357, 65540, 1, 786429, 65540, 0, 720894, 65540, 1, 655358, 65540, 0, 589823, 65540, 1, 196609, 65540, 0, 65537, 65540, 1, 2, 65540, 0, -65534, 65540, 1, 65538, 65540, 0, 131074, 65540, 1, 393223, 65540, 0, 262151, 65540, 1, 131079, 65540, 0, 7, 65540, 1, -131065, 65540, 0, -196601, 65540, 1, -262136, 65540, 0, -327672, 65540, 1, -393207, 65540, 0, 131081, 65540, 0, 9, 65540, 1, -131063, 65540, 0, -262135, 65540, 1, -196600, 65540, 0, -131064, 65540, 1, -65529, 65540, 0, -65528, 65540, 1, 8, 65540, 0, 65543, 65540, 1, 65544, 65540, 0, 131080, 65540, 1, 196615, 65540, 0, 262152, 65540, 0, 196616, 65540, 1, 327687, 65540, 1, 131076, 4, 0, 196612, 4, 1, 262149, 4, 0, 327685, 4, 1, 393222, 4, 0, 262150, 4, 1, 131078, 4, 0, 6, 4, 1, -131066, 4, 0, -196603, 4, 1, -262139, 4, 0, -327676, 4, 1, -393212, 4, 0, -262140, 4, 1, -131068, 4, 0, 4, 4, 1, 65540, 4, 0, -65532, 4, 1, -196604, 4, 0, -131067, 4, 1, 5, 4, 0, -65531, 4, 0, 65541, 4, 1, 131077, 4, 1, 196613, 4, 0, 131082, 4, 0, 10, 4, 1, -131062, 4, 0, -262134, 4, 1, -393206, 4, 0, -196605, 65540, 3, -65533, 65540, 2, 65539, 65540, 3, -327677, 65540, 2, -458749, 65540, 3, 1048572, 65540, 5, 917500, 65540, 4, 786428, 65540, 5, 655356, 65540, 4, 524284, 65540, 5, 458758, 4, 3, 327686, 4, 3, 196614, 4, 3, 65542, 4, 3, -65530, 4, 3, 65545, 65540, 3, -65527, 65540, 3, -196599, 65540, 3, -327671, 65540, 3, -458743, 65540, 3, 196618, 4, 5, 65546, 4, 4, -65526, 4, 5, -196598, 4, 4, -327670, 4, 5)
layer_3/name = "decorations"
layer_3/y_sort_enabled = true
layer_3/tile_data = PackedInt32Array()

[node name="DynamicCamera" parent="." instance=ExtResource("3_thfvk")]
position = Vector2(120, 763)

[node name="PlayerSpawn0" type="Sprite2D" parent="." groups=["player_spawn"]]
position = Vector2(-289, 674)
texture = ExtResource("4_va2wi")

[node name="PlayerSpawn1" type="Sprite2D" parent="." groups=["player_spawn"]]
position = Vector2(-178, 614)
texture = ExtResource("4_va2wi")

[node name="PlayerSpawn2" type="Sprite2D" parent="." groups=["player_spawn"]]
position = Vector2(-181, 744)
texture = ExtResource("4_va2wi")

[node name="PlayerSpawn3" type="Sprite2D" parent="." groups=["player_spawn"]]
position = Vector2(-74, 684)
texture = ExtResource("4_va2wi")

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="EnemySpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="SpellPickupSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="EnemySpawns" type="Node2D" parent="."]

[node name="RoomExit" parent="." instance=ExtResource("5_dh6mk")]
position = Vector2(1686, 96)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.65098, 0.65098, 0.65098, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BossBars" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 125.0
grow_horizontal = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 40.0
offset_top = 141.0
offset_right = 157.0
offset_bottom = 164.0

[connection signal="all_waves_cleared" from="." to="RoomExit" method="unlock"]
[connection signal="player_entered" from="RoomExit" to="." method="_on_room_exit_player_entered"]
